# beeai-platform

./: .gitignore  CONTRIBUTING.md  mise.toml  pnpm-lock.yaml
.github/workflows/: e2e-test.yml
agents/official/rag-agent/: pyproject.toml
agents/official/rag-agent/src/rag_agent/: agent.py  vector_search_tool.py
agents/ui/form/: pyproject.toml
apps/beeai-cli/: .env.template  pyproject.toml  tasks.toml
apps/beeai-cli/src/: beeai_sdk
apps/beeai-sdk/: pyproject.toml
apps/beeai-sdk/examples/: cli.py  (+2 more)
apps/beeai-server/: Dockerfile  pyproject.toml  tasks.toml  template.env
apps/beeai-ui/: .env.example  Dockerfile  middleware.ts  package.json  tasks.toml  tsconfig.json
docs/: docs.json
docs/build-agents/: agent-details.mdx  hello-world.mdx
docs/building-agents/: bring-in-external-agents.mdx  build-custom-agents.mdx
docs/community-and-support/: contribute.mdx  troubleshooting-guide.mdx
docs/concepts/: acp-protocol.mdx  agents.mdx  architecture.mdx  rag.mdx
docs/deployment/: kubernetes.mdx  self-hosting-options.mdx
docs/getting-started/: manage-agents.mdx  share-agents.mdx
docs/how-to/: build-agents.mdx  discover-agents.mdx  environment-configuration.mdx  run-agents.mdx  share-agents.mdx  ui-overview.mdx
docs/introduction/: installation.mdx  quickstart.mdx  welcome.mdx
docs/migration-guides/: acp-to-a2a-migration.md
docs/working-with-agents/: cli-reference.mdx
helm/: tasks.toml  values.yaml
helm/beeai-platform/: values.yaml
helm/crds/: certificate.yaml  gateway.yaml  issuer.yaml  routes.yaml
helm/templates/: deployment.yaml  pvc.yaml
(+210 files in other folders)
